--- a/nginx-config/default.conf
+++ b/nginx-config/default.conf
@@ -2,9 +2,9 @@ server {
     listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
 
-    server_name         brokencrystals.com;
-    ssl_certificate     /etc/letsencrypt/live/brokencrystals.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/brokencrystals.com/privkey.pem;
+    server_name         user0.cst.deegouser.net;
+    ssl_certificate     /etc/letsencrypt/live/user0.cst.deegouser.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/user0.cst.deegouser.net/privkey.pem;
 
     root         /var/www/html;
 
