--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "node-jwk": "^0.1.0",
     "pg": "^8.5.1",
     "raw-body": "^2.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
