--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^7.6.7",
     "@nestjs/platform-fastify": "^7.6.7",
     "@nestjs/swagger": "^4.7.12",
+    "@types/crypto-js": "^4.0.1",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "dot": "^1.1.3",
@@ -39,10 +40,12 @@
     "fastify-session": "^5.2.1",
     "fastify-swagger": "^4.0.1",
     "jose": "^2.0.3",
+    "js-sha1": "^0.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.5",
     "jwt-simple": "^0.5.6",
     "libxmljs": "^0.19.7",
+    "lint": "^0.7.0",
     "node-jwk": "^0.1.0",
     "pg": "^8.5.1",
     "raw-body": "^2.4.1",
