--- a/public/package.json
+++ b/public/package.json
@@ -12,6 +12,7 @@
     "get-browser-fingerprint": "^2.0.1",
     "history": "^4.10.1",
     "jest": "^26.6.3",
+    "js-sha1": "^0.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-owl-carousel": "^2.3.1",
